using clean js for tests

--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
 			mocha.reporter('html');
 			var expect = chai.expect;
 		</script>
-		<script src="./lib/GoogleMaps.js"></script>
+		<script src="./GoogleMaps.js"></script>
 		<script>
 			if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
 			else { mocha.run(); }
