--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 		<div id="mocha"></div>
 		<script src="../node_modules/mocha/mocha.js"></script>
 		<script src="../node_modules/chai/chai.js"></script>
-		<script src="../lib/Google.min.js"></script>
+		<script src="../lib/Google.js"></script>
 		<script>
 			mocha.ui('bdd');
 			mocha.reporter('html');
